test/expected/error_empty_first_line.out
shit: 3:1: error: Unterminated string literal.
     3 |  "unterminated
       |  ^~~~~~~~~~~~~ here.
shit: 3:14: note:
     3 |  "unterminated
       |               ^~ Expected " here.
